# graphcut

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
demo_project/: project.yaml
src/graphcut/: agent_runner.py  agent_workflows.py  api.py  audio_normalizer.py  cli.py  clip_selector.py  compare_sbs.py  exporter.py  factory.py  ffmpeg_executor.py  filtergraph.py  generation_queue.py  models.py  platforms.py  project_manager.py  renderer.py
src/graphcut/static/: index.html
src/graphcut/static/css/: editor.css
src/graphcut/static/js/: api.js  app.js
src/graphcut/static/js/components/: clip-panel.js  effects-panel.js  export-panel.js  overlays-panel.js  preview-panel.js  scenes-panel.js  source-panel.js  transcript-panel.js  trim-modal.js
src/quickcut/: audio_mixer.py  audio_normalizer.py  caption_generator.py  cli.py  exporter.py  ffmpeg_executor.py  filtergraph.py  media_prober.py  models.py  overlay_compositor.py  project_manager.py  renderer.py  scene_detector.py  silence_detector.py  transcriber.py  transcript_editor.py  voice_recorder.py
tests/: conftest.py  test_agent_runner.py  test_agent_workflows.py  test_audio.py  test_audio_normalizer.py  test_captions.py  test_clip_selector.py  test_compare_sbs.py  test_export.py  test_factory.py  test_filtergraph.py  test_generation_queue.py  test_models.py  test_overlays.py  test_platforms.py  test_prober.py  test_project_manager.py  test_renderer.py  test_transcriber.py
